<resources>
    <string name="app_name">YallaGoom</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="google_maps_key">AIzaSyAPgJOTSuSn31iMoqnNW-p1Aq3ZJN6oUyY</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="watch_match_al_sadd_vs_al_arabi">Watch Match Al Sadd VS Al Arabi</string>
    <string name="log_in">LOG IN</string>
    <string name="yallagoom">YALLAGOOM</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="last_name">Last Name</string>
    <string name="email_name_example_com">Email: name@example.com</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="i_agree_to_the_terms_amp_amp_conditions"><![CDATA[I Agree to the Terms && Conditions]]></string>
    <string name="sing_up">SING UP</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="skip_login">Skip Login</string>
    <string name="you_must">You must log in</string>
    <string name="sports_your_play">Sports Your Play</string>
    <string name="skip2">Skip</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile ex: 598835900 (optional)</string>
    <string name="email_or_mobile_974567784990">Email or mobile (+974567784990)</string>
    <string name="agree_on">Agree on&#160;</string>
    <string name="terms_amp_amp_conditions"><![CDATA[Terms && Conditions]]></string>
    <string name="please_wait">Please wait</string>
    <string name="enter_email_mobil">Please enter Email or Mobile</string>
    <string name="check_first_name">Please enter your first name</string>
    <string name="check_last_name">Please enter your last name</string>
    <string name="check_email">Please enter your email</string>
    <string name="check_password">Please enter your password</string>
    <string name="check_country">Please enter your country</string>
    <string name="check_phone">Please enter your phone</string>
    <string name="check_date">Please enter your birth date</string>
    <string name="check_terms">Please check the terms and conditions</string>
    <string name="password_size">minimum password size 6</string>
    <string name="free">Free</string>
    <string name="event_tittle">Event Tittle</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="cost">Cost</string>
    <string name="both">Both</string>
    <string name="near_by_location">Near by location</string>
    <string name="choose_date">Choose date</string>
    <string name="search">SEARCH</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="enter_category">Enter Category</string>
    <string name="previous">Previous</string>
    <string name="calendar">Calendar</string>
    <string name="between">Between</string>
    <string name="after_date">After date</string>
    <string name="specific_date">Specific date</string>
    <string name="none">None</string>
    <string name="this_week">This week</string>
    <string name="today">Today</string>
    <string name="start_date">Start</string>
    <string name="end_date">End</string>
    <string name="check_date_greater">Please end date must be greater than start date</string>
    <string name="check_end_date">Please enter end date</string>
    <string name="select_cat">Please select category</string>
    <string name="filters">Filters</string>
    <string name="Sports">Sports</string>
    <string name="dancing">Dancing</string>
    <string name="Social">Social</string>
    <string name="invite">Invite ( 0 )</string>
    <string name="invite_">Invite</string>
    <string name="enter_country">Enter Country</string>
    <string name="players_filter">Players Filter</string>
    <string name="player_name">Player name</string>
    <string name="choose_sport">Choose Sport</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="professional">Professional</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_event">Choose event</string>
    <string name="my_event">My Event</string>
    <string name="new_event">New Event</string>
    <string name="choose_dates_and_times">Choose Dates and times</string>
    <string name="paid">Paid</string>
    <string name="description">Description</string>
    <string name="choose_event_location">Choose event location</string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="enter_sport">Enter sport</string>
    <string name="slect_one">Please select at least one</string>
    <string name="select_one_event">Please select at least on event</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="select_sport">Please choose sport</string>
    <string name="select_date">Please select date</string>
    <string name="select_event_price">Please select event price</string>
    <string name="select_event_type">Please select Event type</string>
    <string name="enter_event_location">Please enter event location</string>
    <string name="select_cost">Please select cost</string>
    <string name="choose_dates">Choose Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="select_start_time">Please select start time</string>
    <string name="time_check">Please end time must be greater than start time</string>
    <string name="add_start_time_check">Please add start time first</string>
    <string name="show_all">Show All</string>
    <string name="show_more">Show More</string>
    <string name="my_events">My Events</string>
    <string name="fa_chevron_left_right">&#xf053;</string>
    <string name="fa_chevron_right_left">&#xf054;</string>
    <string name="fa_angle_right_left">&#xf105;</string>
    <string name="who_respond_going">Who respond going</string>
    <string name="may_be_and_not_interested">May be and not interested</string>
    <string name="upcoming_text">Upcomming Events</string>
    <string name="may_be">May be</string>
    <string name="going">Going</string>
    <string name="not_interested">Not Interested</string>
    <string name="end_date_label">End Date</string>
    <string name="start_date_label">Start Date</string>
    <string name="nearby">Nearby</string>
    <string name="change">Change</string>
    <string name="palestine">Palestine</string>
    <string name="start_amp_end_time"><![CDATA[Start & End Time]]></string>
    <string name="enter_cost">Enter Cost</string>
    <string name="privacy">Privacy</string>
    <string name="pleae_add_description">Pleae add description</string>
    <string name="location_name">Location Name</string>
    <string name="event_title">Event title</string>
    <string name="label">label</string>
    <string name="select_your_status">Please select your status</string>
    <string name="please_enter_even_title">Please enter Event title</string>
    <string name="add_cost">Please enter cost</string>
    <string name="delete_event_msg">Delete event successfully</string>
    <string name="near_by">Near by</string>
    <string name="level">Level</string>
    <string name="category">Category</string>
    <string name="create_new_event">Create new event</string>
    <string name="choose">Choose</string>
    <string name="create_event_success">Create event successfully</string>
    <string name="organizer_name">Organizer name</string>
    <string name="organizer_description">Organizer description</string>
    <string name="search_small">Search</string>
    <string name="block">Block</string>
    <string name="find_friend_from_mobile">Find friends from contacts</string>
    <string name="friends">Friends</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="action_updateDataset">Update dataset</string>
    <string name="invite_to_app">Invite to app</string>
    <string name="add_friend">Add Friend</string>
    <string name="already_friend">Already Friend</string>
    <string name="delete_friend">Delete Friend successfully</string>
    <string name="update_event">Update event successfully</string>
    <string name="block_friend">Block friend successfully</string>
    <string name="add_friend_sucess">Add friend successfully</string>
    <string name="accept_friend">Accept friend successfully</string>
    <string name="unfired">unfired</string>
    <string name="friends_list">Friends List</string>
    <string name="new_requests">New Requests</string>
    <string name="reject_friend">Reject friend successfully</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="no_data_available">No data available</string>
    <string name="this_month">This Month</string>
    <string name="january">JANUARY</string>
    <string name="december_2017">DECEMBER 2017</string>
    <string name="by">By</string>
    <string name="home">Home</string>
    <string name="find_a_player">Find a player</string>
    <string name="find_event">Find event</string>
    <string name="friend_s_events">Friend’s events</string>
    <string name="my_events_">My events</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="my_groups">My Groups</string>
    <string name="delete">Delete</string>
    <string name="others_groups">Others Groups</string>
    <string name="delete_group">Delete Group successfully</string>
    <string name="groups">Groups</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group name</string>
    <string name="add_group">Add Group successfully</string>
    <string name="group_title">Please enter group title</string>
    <string name="_week">Week</string>
    <string name="discover">Discover</string>
    <string name="offers">Offers</string>
    <string name="my_bookings">My Bookings</string>
    <string name="wishlist">Wishlist</string>
    <string name="tickets">Tickets</string>
    <string name="gifts">Gifts</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="discover_other_country">Discover other country</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="recommendations_for_you">Recommendations for you</string>
    <string name="discover_by_category">Discover By Category</string>
    <string name="special_offers">Special Offers</string>
    <string name="friend_event">Friends Event</string>
    <string name="book_now">Book Now</string>
    <string name="more_details">More details</string>
    <string name="all_reviews">All Reviews</string>
    <string name="where_to_meet">Where to meet</string>
    <string name="see_full_map">See Full map</string>
    <string name="back">Back</string>
    <string name="reviews">Reviews</string>
    <string name="map">Map</string>
    <string name="check_out">Check out</string>
    <string name="price">Price</string>
    <string name="schedule">Schedule</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="schedule2">Schedule2</string>
    <string name="edit">Edit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="gifts_list">Gifts List</string>
    <string name="favourite">Favourite</string>
    <string name="my_cart">My Cart</string>
</resources>