<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.oxygen.yallagoom.activity.ShowAllMyEventActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d1f8f8f8"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:onClick="Back"
            android:padding="@dimen/_10sdp">

            <com.oxygen.yallagoom.font.TextAwesome
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/fa_chevron_left_right"
                android:textColor="@drawable/pressed_189091"
                android:textSize="@dimen/_14sdp" />

            <com.oxygen.yallagoom.font.Roboto_Regular
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/back_icon"
                android:layout_toRightOf="@+id/back_icon"
                android:text="@string/my_events"
                android:textColor="@drawable/pressed_189091"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>


        <com.oxygen.yallagoom.font.Roboto_Regular
            android:id="@+id/name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_event"
            android:textColor="@color/color_494848"
            android:textSize="@dimen/_11sdp" />

        <com.oxygen.yallagoom.font.Roboto_Regular
            android:id="@+id/right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/edit"
            android:textColor="@drawable/pressed_189091"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="0.9dp"
        android:background="@color/color_e2dfdf" />
</LinearLayout>
