<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/must_login"
        android:visibility="gone" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tabs_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_minus8sdp"
            android:background="@drawable/bt_bg_gradiant180"
            android:paddingBottom="@dimen/_3sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="@dimen/_2sdp"
            app:tabMode="scrollable"
            app:tabTextAppearance="@style/MineCustomTabText">


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gifts_list" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cart" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/body_gifts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs_bar"
        android:background="@color/white_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>