<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.oxygen.yallagoom.activity.ShowAllMyEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:background="@color/color_d1f8f8f8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d1f8f8f8"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:onClick="Back"
            android:padding="@dimen/_10sdp">

            <com.oxygen.yallagoom.font.TextAwesome
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/fa_chevron_left_right"
                android:textColor="@drawable/pressed_189091"
                android:textSize="@dimen/_14sdp" />

            <com.oxygen.yallagoom.font.Roboto_Regular
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/back_icon"
                android:layout_toRightOf="@+id/back_icon"
                android:text="@string/friends"
                android:textColor="@drawable/pressed_189091"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_view"
            android:layout_toLeftOf="@+id/right_text"
            android:layout_toRightOf="@+id/back_view"
            android:layout_toStartOf="@+id/right_text"
            android:background="@drawable/find_friends_radius_search"
            android:gravity="center"
            android:paddingBottom="@dimen/_7sdp"
            android:paddingTop="@dimen/_7sdp">

            <com.oxygen.yallagoom.font.TextAwesome
                android:id="@+id/search_icon_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_7sdp"
                android:text="@string/fa_search"
                android:textColor="@color/color_8c8c8c"
                android:textSize="@dimen/_14sdp" />

            <com.oxygen.yallagoom.font.Roboto_Reqular_EditText
                android:id="@+id/search_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/search_icon_"
                android:layout_toRightOf="@+id/search_icon_"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/search_small"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/color_8a8a8f"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


        <com.oxygen.yallagoom.font.Roboto_Regular
            android:id="@+id/right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@drawable/pressed_189091"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height=".9dp"
        android:background="@color/color_e2dfdf" />
</LinearLayout>
