<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_30_255_op"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/layout_round_corners"
            android:orientation="vertical">

            <com.yallagoom.font.Roboto_Regular
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="hellow mahmoud"
                android:textSize="@dimen/_10sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_e2dfdf" />

            <com.yallagoom.font.Roboto_Regular
                android:id="@+id/camera_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/camera"
                android:textColor="@color/color_df488a"
                android:textSize="@dimen/_12sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_e2dfdf" />
            <com.yallagoom.font.Roboto_Regular
                android:id="@+id/gallery_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/gallery"
                android:textColor="@color/color_df488a"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/layout_round_corners"
            android:orientation="vertical">

            <com.yallagoom.font.Roboto_Regular
                android:id="@+id/choose_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/blue_light"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>